# Bluezpp

./: .gitignore  CMakeLists.txt  README.md
includes/Adapter/: Adapter.hpp  AdapterManager.hpp  AdapterTypeTraits.hpp  BluetoothAddress.hpp  BluetoothAddressTypeTrait.hpp
includes/Bluez/HCI/: BluezHCI.hpp
includes/Bluez/MGMT/: BluezMGMT.hpp  MGMTCommand.hpp  MGMTCommandComplete.hpp  MGMTCommandStatus.hpp  MGMTErrorCode.hpp  MGMTEvent.hpp
includes/Miscs/: IObserver.hpp  ISubject.hpp  TraitsExtended.hpp
includes/Profiles/: Profile.hpp
includes/Profiles/Attribute/: Attribute.hpp
srcs/Adapter/: Adapter.cpp  AdapterManager.cpp  BluetoothAddress.cpp
srcs/Bluez/HCI/: BluezHCI.cpp
srcs/Bluez/MGMT/: BluezMGMT.cpp
test/: CMakeLists.txt  main.cpp
